deploy/kustomize/speedupmyapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: speedupmyapp
  name: speedupmyapp
spec:
  selector:
    matchLabels:
      app: speedupmyapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: speedupmyapp
    spec:
      containers:
        - name: speedupmyapp
          image: eb129/speedupmyapp
          imagePullPolicy: Always
          command: ['npm', 'run', 'dev']
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 512m
              memory: 128M
            requests:
              cpu: 100m
              memory: 64M
