deploy/kustomize/speedupmyapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedupmyapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - speedupmy.app
      secretName: speedupmyapp-tls
  rules:
    - host: speedupmy.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedupmyapp
                port:
                  number: 3000
